--- a/app/src/main/res/layout/activity_resolution_deux.xml
+++ b/app/src/main/res/layout/activity_resolution_deux.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,14 +7,19 @@
     android:background="@color/background2"
     tools:context=".ResolutionDeuxActivity">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="16dp">
 
         <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:columnCount="4"
             android:rowCount="15">
 
@@ -24,9 +29,9 @@
                 android:layout_height="60dp"
                 android:layout_row="0"
                 android:layout_column="0"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginStart="30dp"
                 app:srcCompat="@drawable/noir1" />
 
 
@@ -36,7 +41,9 @@
                 android:layout_height="60dp"
                 android:layout_row="0"
                 android:layout_column="1"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir2" />
 
             <ImageView
@@ -45,7 +52,9 @@
                 android:layout_height="60dp"
                 android:layout_row="0"
                 android:layout_column="2"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir3" />
 
             <ImageView
@@ -54,7 +63,9 @@
                 android:layout_height="60dp"
                 android:layout_row="0"
                 android:layout_column="3"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir4" />
 
             <ImageView
@@ -63,9 +74,9 @@
                 android:layout_height="60dp"
                 android:layout_row="1"
                 android:layout_column="3"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir5" />
 
             <ImageView
@@ -74,9 +85,9 @@
                 android:layout_height="60dp"
                 android:layout_row="2"
                 android:layout_column="3"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir6" />
 
             <ImageView
@@ -85,7 +96,9 @@
                 android:layout_height="60dp"
                 android:layout_row="2"
                 android:layout_column="2"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir7" />
 
             <ImageView
@@ -94,7 +107,9 @@
                 android:layout_height="60dp"
                 android:layout_row="2"
                 android:layout_column="1"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir8" />
 
             <ImageView
@@ -103,9 +118,9 @@
                 android:layout_height="60dp"
                 android:layout_row="2"
                 android:layout_column="0"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginStart="30dp"
                 app:srcCompat="@drawable/noir9" />
 
             <ImageView
@@ -114,10 +129,9 @@
                 android:layout_height="60dp"
                 android:layout_row="3"
                 android:layout_column="0"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginBottom="15dp"
-                android:layout_marginStart="30dp"
                 app:srcCompat="@drawable/noir10" />
 
             <ImageView
@@ -126,9 +140,9 @@
                 android:layout_height="60dp"
                 android:layout_row="4"
                 android:layout_column="0"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginStart="30dp"
                 app:srcCompat="@drawable/noir11" />
 
             <ImageView
@@ -137,7 +151,9 @@
                 android:layout_height="60dp"
                 android:layout_row="4"
                 android:layout_column="1"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir12" />
 
             <ImageView
@@ -146,7 +162,9 @@
                 android:layout_height="60dp"
                 android:layout_row="4"
                 android:layout_column="2"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir13" />
 
             <ImageView
@@ -155,7 +173,9 @@
                 android:layout_height="60dp"
                 android:layout_row="4"
                 android:layout_column="3"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir14" />
 
             <ImageView
@@ -164,7 +184,9 @@
                 android:layout_height="60dp"
                 android:layout_row="5"
                 android:layout_column="3"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir15" />
 
             <ImageView
@@ -173,7 +195,9 @@
                 android:layout_height="60dp"
                 android:layout_row="6"
                 android:layout_column="3"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir16" />
 
             <ImageView
@@ -182,7 +206,9 @@
                 android:layout_height="60dp"
                 android:layout_row="6"
                 android:layout_column="2"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir17" />
 
             <ImageView
@@ -191,7 +217,9 @@
                 android:layout_height="60dp"
                 android:layout_row="6"
                 android:layout_column="1"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir18" />
 
             <ImageView
@@ -200,9 +228,9 @@
                 android:layout_height="60dp"
                 android:layout_row="6"
                 android:layout_column="0"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginStart="30dp"
                 app:srcCompat="@drawable/noir19" />
 
 
@@ -212,10 +240,9 @@
                 android:layout_height="60dp"
                 android:layout_row="7"
                 android:layout_column="0"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginBottom="15dp"
                 app:srcCompat="@drawable/noir20" />
 
             <ImageView
@@ -224,9 +251,9 @@
                 android:layout_height="60dp"
                 android:layout_row="8"
                 android:layout_column="0"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginStart="30dp"
                 app:srcCompat="@drawable/noir21" />
 
             <ImageView
@@ -235,7 +262,9 @@
                 android:layout_height="60dp"
                 android:layout_row="8"
                 android:layout_column="1"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir22" />
 
             <ImageView
@@ -244,7 +273,9 @@
                 android:layout_height="60dp"
                 android:layout_row="8"
                 android:layout_column="2"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir23" />
 
             <ImageView
@@ -253,7 +284,9 @@
                 android:layout_height="60dp"
                 android:layout_row="8"
                 android:layout_column="3"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir24" />
 
 
@@ -263,7 +296,9 @@
                 android:layout_height="60dp"
                 android:layout_row="9"
                 android:layout_column="3"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir25" />
 
             <ImageView
@@ -272,7 +307,9 @@
                 android:layout_height="60dp"
                 android:layout_row="10"
                 android:layout_column="3"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir26" />
 
             <ImageView
@@ -281,7 +318,9 @@
                 android:layout_height="60dp"
                 android:layout_row="10"
                 android:layout_column="2"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir27" />
 
             <ImageView
@@ -290,7 +329,9 @@
                 android:layout_height="60dp"
                 android:layout_row="10"
                 android:layout_column="1"
-                android:layout_margin="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/noir28" />
 
             <ImageView
@@ -299,9 +340,9 @@
                 android:layout_height="60dp"
                 android:layout_row="10"
                 android:layout_column="0"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginStart="30dp"
                 app:srcCompat="@drawable/noir29" />
 
             <ImageView
@@ -310,10 +351,9 @@
                 android:layout_height="60dp"
                 android:layout_row="11"
                 android:layout_column="0"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginBottom="15dp"
                 app:srcCompat="@drawable/noir30" />
 
             <ImageView
@@ -322,38 +362,24 @@
                 android:layout_height="60dp"
                 android:layout_row="12"
                 android:layout_column="0"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="100dp"
                 app:srcCompat="@drawable/noir31" />
 
-
-            <Button
-                android:layout_marginTop="20dp"
-                android:layout_column="0"
-                android:layout_columnSpan="4"
-                android:layout_columnWeight="1"
-                android:layout_row="13"
-                android:layout_rowWeight="1"
-                android:id="@+id/resetButton"
-                android:text="@string/reset"/>
-
-
-            <Button
-                android:layout_marginTop="10dp"
-                android:layout_column="0"
-                android:layout_columnSpan="4"
-                android:layout_columnWeight="1"
-                android:layout_row="14"
-                android:layout_rowWeight="1"
-                android:id="@+id/next"
-                android:text="@string/previous"/>
-
         </GridLayout>
+    </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:itemBackground="@color/black"
+        app:itemIconTint="@drawable/selector"
+        app:itemTextColor="@drawable/selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/menu_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
 
 
-    </LinearLayout>
-
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
