--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background">#2D313D</color>
+    <color name="ic_launcher_background">#FFFFFF</color>
     <color name="background2">#FF018786</color>
+    <color name="sel">#F3FFBF</color>
 </resources>
